# rust_mmv

./: Cargo.toml  README.md  build.sh
src/: copier.rs  files.rs  names.rs  pattern.rs
tests/: integration_test.rs
